--- a/application-prod.properties
+++ b/application-prod.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
-spring.datasource.password=Shaheda@2801
+spring.datasource.password=root
 
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.properties.hibernate.show_sql=true
